; ModuleID = '/home/carl/AnghaBench/darknet/examples/extr_go.c_string_to_board.c'
source_filename = "/home/carl/AnghaBench/darknet/examples/extr_go.c_string_to_board.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @string_to_board(i8* %0, float* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca float*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8, align 1
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store float* %1, float** %4, align 8
  %11 = load float*, float** %4, align 8
  %12 = call i32 @memset(float* %11, i32 0, i32 2888)
  store i32 0, i32* %7, align 4
  store i32 0, i32* %5, align 4
  br label %13

13:                                               ; preds = %67, %2
  %14 = load i32, i32* %5, align 4
  %15 = icmp slt i32 %14, 91
  br i1 %15, label %16, label %70

16:                                               ; preds = %13
  %17 = load i8*, i8** %3, align 8
  %18 = load i32, i32* %5, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i8, i8* %17, i64 %19
  %21 = load i8, i8* %20, align 1
  store i8 %21, i8* %8, align 1
  store i32 0, i32* %6, align 4
  br label %22

22:                                               ; preds = %63, %16
  %23 = load i32, i32* %6, align 4
  %24 = icmp slt i32 %23, 4
  br i1 %24, label %25, label %66

25:                                               ; preds = %22
  %26 = load i8, i8* %8, align 1
  %27 = sext i8 %26 to i32
  %28 = load i32, i32* %6, align 4
  %29 = mul nsw i32 2, %28
  %30 = ashr i32 %27, %29
  %31 = and i32 %30, 1
  store i32 %31, i32* %9, align 4
  %32 = load i8, i8* %8, align 1
  %33 = sext i8 %32 to i32
  %34 = load i32, i32* %6, align 4
  %35 = mul nsw i32 2, %34
  %36 = add nsw i32 %35, 1
  %37 = ashr i32 %33, %36
  %38 = and i32 %37, 1
  store i32 %38, i32* %10, align 4
  %39 = load i32, i32* %9, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %46

41:                                               ; preds = %25
  %42 = load float*, float** %4, align 8
  %43 = load i32, i32* %7, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds float, float* %42, i64 %44
  store float 1.000000e+00, float* %45, align 4
  br label %56

46:                                               ; preds = %25
  %47 = load i32, i32* %10, align 4
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %55

49:                                               ; preds = %46
  %50 = load float*, float** %4, align 8
  %51 = load i32, i32* %7, align 4
  %52 = add nsw i32 %51, 361
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds float, float* %50, i64 %53
  store float 1.000000e+00, float* %54, align 4
  br label %55

55:                                               ; preds = %49, %46
  br label %56

56:                                               ; preds = %55, %41
  %57 = load i32, i32* %7, align 4
  %58 = add nsw i32 %57, 1
  store i32 %58, i32* %7, align 4
  %59 = load i32, i32* %7, align 4
  %60 = icmp sge i32 %59, 361
  br i1 %60, label %61, label %62

61:                                               ; preds = %56
  br label %66

62:                                               ; preds = %56
  br label %63

63:                                               ; preds = %62
  %64 = load i32, i32* %6, align 4
  %65 = add nsw i32 %64, 1
  store i32 %65, i32* %6, align 4
  br label %22

66:                                               ; preds = %61, %22
  br label %67

67:                                               ; preds = %66
  %68 = load i32, i32* %5, align 4
  %69 = add nsw i32 %68, 1
  store i32 %69, i32* %5, align 4
  br label %13

70:                                               ; preds = %13
  ret void
}

declare dso_local i32 @memset(float*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
